--- a/index.html
+++ b/index.html
@@ -4,7 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
     <title>Oana David | UX Designer</title>
   </head>
-  <body></body>
+  <body>
+    <header class="main-header">
+      <div class="container main-header-container">
+        <a href="#"><img src="./assets/logo.svg" alt="" /></a>
+        <ul class="nav-list">
+          <li class="nav-item"><a href="#">Experience</a></li>
+          <li class="nav-item"><a href="#">Projects</a></li>
+          <li class="nav-item"><a href="#">Education</a></li>
+          <li class="nav-item"><a href="#">Get To Know Me</a></li>
+          <li class="nav-item"><a href="#">Get In Touch</a></li>
+        </ul>
+        <button class="nav-button">
+          <img src="./assets/menu.svg" alt="open mobile menu button" />
+        </button>
+      </div>
+    </header>
+    <main></main>
+
+    <script src="./scripts/script.js"></script>
+  </body>
 </html>
