--- a/index.html
+++ b/index.html
@@ -13,22 +13,23 @@
     <title>Oana David | UX Designer</title>
   </head>
   <body>
-    <header class="main-header">
-      <div class="container main-header-container">
-        <a href="#"><img src="./assets/logo.svg" alt="" /></a>
-        <ul class="nav-list">
-          <li class="nav-item"><a href="#">Experience</a></li>
-          <li class="nav-item"><a href="#">Projects</a></li>
-          <li class="nav-item"><a href="#">Education</a></li>
-          <li class="nav-item"><a href="#">Get To Know Me</a></li>
-          <li class="nav-item"><a href="#">Get In Touch</a></li>
-        </ul>
-        <button class="nav-button">
-          <img src="./assets/menu.svg" alt="open mobile menu button" />
-        </button>
-      </div>
-    </header>
-    <main></main>
+    <main>
+      <header class="main-header">
+        <div class="container main-header-container">
+          <a href="#"><img src="./assets/logo.svg" alt="" /></a>
+          <ul class="nav-list">
+            <li class="nav-item"><a href="#">Experience</a></li>
+            <li class="nav-item"><a href="#">Projects</a></li>
+            <li class="nav-item"><a href="#">Education</a></li>
+            <li class="nav-item"><a href="#">Get To Know Me</a></li>
+            <li class="nav-item"><a href="#">Get In Touch</a></li>
+          </ul>
+          <button class="nav-button">
+            <img src="./assets/menu.svg" alt="open mobile menu button" />
+          </button>
+        </div>
+      </header>
+    </main>
 
     <script src="./scripts/script.js"></script>
   </body>
