--- a/index.html
+++ b/index.html
@@ -13,22 +13,48 @@
     <title>Oana David | UX Designer</title>
   </head>
   <body>
+    <header class="main-header">
+      <div class="container main-header-container">
+        <a href="#"><img src="./assets/logo.svg" alt="" /></a>
+        <ul class="nav-list">
+          <li class="nav-item"><a href="#">Experience</a></li>
+          <li class="nav-item"><a href="#">Projects</a></li>
+          <li class="nav-item"><a href="#">Education</a></li>
+          <li class="nav-item"><a href="#">Get To Know Me</a></li>
+          <li class="nav-item"><a href="#">Get In Touch</a></li>
+        </ul>
+        <button class="nav-button">
+          <img src="./assets/menu.svg" alt="open mobile menu button" />
+        </button>
+      </div>
+    </header>
     <main>
-      <header class="main-header">
-        <div class="container main-header-container">
-          <a href="#"><img src="./assets/logo.svg" alt="" /></a>
-          <ul class="nav-list">
-            <li class="nav-item"><a href="#">Experience</a></li>
-            <li class="nav-item"><a href="#">Projects</a></li>
-            <li class="nav-item"><a href="#">Education</a></li>
-            <li class="nav-item"><a href="#">Get To Know Me</a></li>
-            <li class="nav-item"><a href="#">Get In Touch</a></li>
-          </ul>
-          <button class="nav-button">
-            <img src="./assets/menu.svg" alt="open mobile menu button" />
-          </button>
+      <section class="hero-section">
+        <div class="container">
+          <div class="hero-content">
+            <div class="hero-content-info">
+              <p class="body-l-medium">Hello! 👋🏻 I’m Oana,</p>
+              <h1>
+                UX Designer <br />
+                With 3 Years Of Experience
+              </h1>
+              <p class="body-l">
+                My job is all about finding solutions that help <br />
+                businesses grow while ensuring they are easy for people to use
+              </p>
+              <button class="primary-button">
+                Download CV
+                <img src="./assets/vuesax/linear/arrow-up.svg" alt="" />
+              </button>
+            </div>
+            <div class="hero-section-image">
+              <img src="./assets/star.svg" alt="" class="star" />
+              <img src="./assets/arrow-2.svg" alt="" class="arrow" />
+              <img class="img-oana" src="./assets/Oana Picture.png" alt="" />
+            </div>
+          </div>
         </div>
-      </header>
+      </section>
     </main>
 
     <script src="./scripts/script.js"></script>
